--- a/index.html
+++ b/index.html
@@ -5,10 +5,100 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Riona Dsouza</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <nav class="navbar fixed-top navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.svg" height="30" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#3B0708" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Projects
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     
+    </div>
+    <div class="container-fluid">
+        <div class="row about">
+            <!-- <div class="col-md-5">
+                <div>
+                    <img src="images/me.jpeg" alt="">
+                </div>
+            </div>
+            <div class="col-md-7">
+                <h2>Riona Dsouza</h2>
+
+                <p>I am a student pursuing my degree in Computer Engineering. For the longest time I have struggled with finding my passion. I find that I’m moderately good at a lot of things but nothing that I could make a career out of. Finally I have found my calling in UX design. It perfectly combines both my love for creativity and my knowledge in technology. I am detail-oriented when it comes to things I like. If I like doing something, I will spend hours on it till I’m satisfied with how it has turned out.
+                    <br><br>
+                    As of now, I haven’t worked in a professional setting yet. I have worked on multiple projects alongside my peers. I will complete my degree next year. Following that, I want to pursue my passion for UX design.
+                </p>
+                <a href="#">
+                    <div class="button">Resume</div>
+                </a>
+            </div> -->
+        </div>
+        <div class="text-center">
+            <h2>Projects</h2>
+        </div>
+        <div class="row projects">
+            <div class="col-md-6">
+                <a href="#">
+                    <img src="images/eatfit.svg" alt="">
+                    <div class="caption"><h4>EatFit</h4></div>
+                </a>
+            </div>
+            <div class="col-md-6">
+                <a href="#">
+                    <img src="images/allegro.svg" alt="">
+                    <div class="caption"><h4>Allegro</h4></div>
+                </a>
+            </div>
+        </div>
+        <div class="row projects">
+            <div class="col-md-6">
+                <a href="#">
+                    <img src="images/pet_family.svg" alt="">
+                    <div class="caption"><h4>Pet Family</h4></div>
+                </a>
+            </div>
+            <!-- <div class="col-md-6">
+                <a href="#">
+                    <img src="images/EatFit.png" alt="">
+                </a>
+            </div> -->
+        </div>
+    </div>
+        <div class="footer text-center">2021 Riona Dsouza</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
