--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                             Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something</a></li>
+                            <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
+                            <li><a class="dropdown-item" href="#">Allegro</a></li>
+                            <li><a class="dropdown-item" href="#">Pet Family</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -45,7 +45,6 @@
                 </ul>
             </div>
         </nav>
-    
     </div>
     <div class="container-fluid">
         <div class="row about">
@@ -66,12 +65,12 @@
                 </a>
             </div> -->
         </div>
-        <div class="text-center">
+        <div class="text-center pt-3">
             <h2>Projects</h2>
         </div>
         <div class="row projects">
             <div class="col-md-6">
-                <a href="#">
+                <a href="eatfit.html">
                     <img src="images/eatfit.svg" alt="">
                     <div class="caption"><h4>EatFit</h4></div>
                 </a>
