--- a/eatfit.html
+++ b/eatfit.html
@@ -15,7 +15,7 @@
 <body class="eatfit">
     <div class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo.svg" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -201,6 +201,13 @@
                 <img src="images/eatfit/u2.png" alt="" width="100%">
                 <img src="images/eatfit/u3.png" alt="" width="100%">
             </div>
+
+            <div class="text-center">
+                <h3>User Flow</h3>
+            </div>
+            <div class="usability">
+                <img src="images/eatfit/userflow.svg" alt="" width="100%">
+            </div>
         </div>
 
         
@@ -243,15 +250,13 @@
             </div>
         </div>
         
-        <div class="text-center">
+        <div class="text-center details">
             <h3>Accessibility Considerations</h3>
         </div> 
-        <div class="text-center">
-            <p>
-                All the text follows clear hierarchy for easy reading and understanding.
+        <div class="info" style="width: fit-content; margin: auto;">
+            •   All the text follows clear hierarchy for easy reading and understanding.
                 <br>
-                Clear iconography that allows for easy navigation.
-            </p>
+            •   Clear iconography that allows for easy navigation.
         </div>
 
         <br><br>
