--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
-                            <li><a class="dropdown-item" href="#">Allegro</a></li>
+                            <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="#">Pet Family</a></li>
                         </ul>
                     </li>
@@ -76,7 +76,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a href="#">
+                <a href="allegro.html">
                     <img src="images/allegro.svg" alt="">
                     <div class="caption"><h4>Allegro</h4></div>
                 </a>
@@ -96,7 +96,7 @@
             </div> -->
         </div>
     </div>
-        <div class="footer text-center">2021 Riona Dsouza</div>
+        <div class="footer text-center">© 2021 Riona Dsouza</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
