--- a/eatfit.html
+++ b/eatfit.html
@@ -35,7 +35,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
-                            <li><a class="dropdown-item" href="#">Allegro</a></li>
+                            <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="#">Pet Family</a></li>
                         </ul>
                     </li>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="row details">
-            <div class="col-md-6 hero-text">
+            <div class="col-md-6">
                 <h3>My Roles</h3>
                 <p>sole UX designer, UX researcher</p>
                 <br>               
