--- a/allegro.html
+++ b/allegro.html
@@ -35,7 +35,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
-                            <li><a class="dropdown-item" href="#">Allegro</a></li>
+                            <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="#">Pet Family</a></li>
                         </ul>
                     </li>
@@ -176,12 +176,11 @@
         <div class="">
             <img src="images/allegro/low-fi.png" alt="" width="100%">
         </div>
-        <br>
-        <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+        <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=2%3A602&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A602" target="_blank">
             <div class="button-dark">Prototype Link</div>
         </a>
     </div>
-
+    <br> <br>
     <div class="usability">
         <div class="">
             <h3>Usability Study Findings</h3>
@@ -202,10 +201,43 @@
         <div class="">
             <img src="images/allegro/high-fi.png" alt="" width="100%">
         </div>
-        <br>
-        <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+        <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=141%3A1110&scaling=scale-down&page-id=141%3A0&starting-point-node-id=141%3A1110&show-proto-sidebar=1" target="_blank">
             <div class="button-dark">Prototype Link</div>
         </a>
     </div>
+    <br>
+    <div class="text-center details">
+        <h2>Accessibility Considerations</h2>
+    </div> 
+    <div class="info" style="width: fit-content; margin: auto;">
+        •   Used good colour contrast to help visually impaired users.
+            <br>
+        •   The icons allow for easy navigation.
+    </div>
+
+    <br><br>
+    <div class="text-center summary">
+        <div class="text-center">
+            <h3>Impact</h3>
+        </div> 
+        <div class="pain_points">
+            <p>
+                Allegro helps users to book musicians from the ease of their home. <br>
+                By allowing the users to view videos and customer reviews, Allegro gives users a better experience.
+            </p>
+        </div>
+        <br>
+        <div class="text-center">
+            <h3>What I learned</h3>
+        </div> 
+        <div class="pain_points">
+            <p>
+                While designing the app, I realised that research plays an important role in the process. <br>
+                While the first design is important, it is more essential to keep iterating on the designs. 
+            </p>
+        </div>
+    </div>    
+    <div class="footer text-center">© 2021 Riona Dsouza</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
