--- a/eatfit.html
+++ b/eatfit.html
@@ -275,6 +275,7 @@
             </div>
         </div>
     </div>
-    
+    <div class="footer text-center">© 2021 Riona Dsouza</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
 </body>
 </html>
