--- a/allegro.html
+++ b/allegro.html
@@ -136,49 +136,54 @@
         </div>
     </div>
     <div class="usability">
-            <div class="">
-                <h3>Paper Wireframes</h3>
+        <div class="">
+            <h3>Paper Wireframes</h3>
+        </div>
+        <div class="col-md-6 px-0">
+            Once i had a vision for the app, I drew some paper wireframes. 
+            These designs mainly focused on the best layouts for screens.
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="images/allegro/wireframe1.jpg" alt="" width="100%">
             </div>
-            <div>
-                Once i had a vision for the app, I drew some paper wireframes. 
-                These designs mainly focused on the best layouts for screens.
+            <div class="col-md-6">
+                <img src="images/allegro/wireframe2.jpg" alt="" width="100%"> <br> <br>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="images/allegro/wireframe1.jpeg" alt="" width="100%">
-                </div>
-                <div class="col-md-6">
-                    <img src="images/allegro/wireframe2.jpeg" alt="" width="100%">
-                </div>
-            </div>
+        </div>
     </div>
     <div class="usability">
-            <div class="">
-                <h3>Digital Wireframes</h3>
-            </div>
-            <div>
-                After the paper wireframes, I moved on to create the digital wireframes. 
-                For this project I used Figma for designing.
-            </div>
         <div class="">
-            <img src="images/allegro/wireframe3.png" alt="" width="100%">
+            <h3>Digital Wireframes</h3>
+        </div>
+        <div class="col-md-6 px-0">
+            After the paper wireframes, I moved on to create the digital wireframes. 
+            For this project I used Figma for designing.
+        </div>
+        <div class="">
+            <img src="images/allegro/wireframe3.png" alt="" width="100%"> <br><br>
         </div>
     </div>
     <div class="usability">
         <div class="">
             <h3>Low-Fidelity Prototype</h3>
         </div>
-        <div>
-            After the paper wireframes, I moved on to create the digital wireframes. 
-            For this project I used Figma for designing.
-        </div>
+        <div class="row">
+            <div class="col-md-6">
+                I connected the screens to create the main user flow. Based on this prototype, I conducted a 
+                usability study to get feedback about the app.
+            </div>
+            <div class="col-md-6 text-right">
+                <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=2%3A602&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A602" target="_blank">
+                    <div class="button mx-auto">Prototype Link</div>
+                </a>
+            </div>
+        </div>        
         <br>
         <div class="">
-            <img src="images/allegro/low-fi.png" alt="" width="100%">
+            <img src="images/allegro/low-fi.png" alt="" width="100%"> <br>
         </div>
-        <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=2%3A602&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A602" target="_blank">
-            <div class="button-dark">Prototype Link</div>
-        </a>
+        
     </div>
     <br> <br>
     <div class="usability">
@@ -189,7 +194,7 @@
     
         <div>
             <img src="images/allegro/u1.png" alt="" width="100%">
-            <img src="images/allegro/u2.png" alt="" width="100%">
+            <img src="images/allegro/u2.png" alt="" width="100%"> <br><br>
         </div>
     </div>
 
@@ -197,15 +202,22 @@
         <div class="">
             <h3>High-Fidelity Prototype</h3>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                The High-Fidelity prototype followed the same flow as the low-fidelity one.
+            </div>
+            <div class="col-md-6 text-right">
+                <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=141%3A1110&scaling=scale-down&page-id=141%3A0&starting-point-node-id=141%3A1110&show-proto-sidebar=1" target="_blank">
+                    <div class="button mx-auto">Prototype Link</div>
+                </a>
+            </div>
+        </div>
         <br>
         <div class="">
-            <img src="images/allegro/high-fi.png" alt="" width="100%">
+            <img src="images/allegro/high-fi.png" alt="" width="100%"> <br>
         </div>
-        <a href="https://www.figma.com/proto/I0rl36lGOx7AYcVcqtAG7t/allegro?node-id=141%3A1110&scaling=scale-down&page-id=141%3A0&starting-point-node-id=141%3A1110&show-proto-sidebar=1" target="_blank">
-            <div class="button-dark">Prototype Link</div>
-        </a>
     </div>
-    <br>
+    <br><br>
     <div class="text-center details">
         <h2>Accessibility Considerations</h2>
     </div> 
