--- a/eatfit.html
+++ b/eatfit.html
@@ -64,7 +64,13 @@
         <div class="details">
             <div>
                 <h3>Project Overview</h3>
-                <p>EatFit is an app for healthy recipes. Using this app young adults can cook healthier versions of what they want to eat.</p>
+                <p>
+                    EatFit is an app for healthy recipes. Using this app young adults can cook healthier versions of what they want to eat. 
+                    <br>
+                    I designed this app as part of the Google certificate. I have tried to follow the complete design process while deisgning the app.
+                    <br>
+                    The project includes a dedicated mobile app, a desktop website and a mobile-only website.
+                </p>
                 <br>               
             </div>
             <div class="">
@@ -74,12 +80,12 @@
             </div>
         </div>
         <div class="row details">
-            <div class="col-md-6">
+            <div class="col-md-6 px-0">
                 <h3>My Roles</h3>
                 <p>sole UX designer, UX researcher</p>
                 <br>               
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 px-0">
                 <h3>My Responsibilities</h3>
                 <p>research, ideation, wireframing, prototyping, responsive design, testing, iterating on designs</p>
                 <br>
@@ -158,8 +164,8 @@
                     <h3>Low-Fidelity Prototype</h3>
                 </div>
                 <div>
-                    After the paper wireframes, I moved on to create the digital wireframes. 
-                    For this project I used Figma for designing.
+                    I connected the screens to create the main user flow. Based on this prototype, I conducted a 
+                    usability study to get feedback about the app.
                 </div>
                 <br><br>
                 <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
