--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
                             <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
-                            <li><a class="dropdown-item" href="#">Pet Family</a></li>
+                            <li><a class="dropdown-item" href="pet_family.html">Pet Family</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -84,7 +84,7 @@
         </div>
         <div class="row projects">
             <div class="col-md-6">
-                <a href="#">
+                <a href="pet_family.html">
                     <img src="images/pet_family.svg" alt="">
                     <div class="caption"><h4>Pet Family</h4></div>
                 </a>
