--- a/eatfit.html
+++ b/eatfit.html
@@ -36,7 +36,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
                             <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
-                            <li><a class="dropdown-item" href="#">Pet Family</a></li>
+                            <li><a class="dropdown-item" href="pet_family.html">Pet Family</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
