--- a/pet_family.html
+++ b/pet_family.html
@@ -47,7 +47,266 @@
         </nav>
     </div>
 
-    
+    <div class="jumbotron jumbotron-fluid jumbotron-pf">
+    </div>
+
+    <div class="text-center">
+        <h3>
+            ❝ Most people who want to adopt pets don't have the right platform to do so. ❞
+        </h3>
+    </div>
+    <br>
+    <div class="details">
+        <div>
+            <h3>Project Overview</h3>
+            <p>
+                An online portal gives users the options to view different animals and decide which one would be 
+                the right fit for them. Pet Family is a website that streamlines the process of pet adoption. A lot of people who want to adopt 
+                pets cannot do so due to lack of options. This website will solve that problem by giving users the 
+                option to choose a pet based on their preferences.
+            </p>
+            <br>               
+        </div>
+        <div class="">
+            <h3>Project Duration</h3>
+            <p>I completed this project of the Google certificate. It took me about a month to complete it. As this was the first time I was designing for multiple screen sizes, I took my time with the whole process.</p>
+            <br>
+        </div>
+    </div>
+    <div class="row details">
+        <div class="col-md-6 px-0">
+            <h3>My Roles</h3>
+            <p>sole UX designer, UX researcher</p>
+            <br>               
+        </div>
+        <div class="col-md-6 px-0">
+            <h3>My Responsibilities</h3>
+            <p>research, ideation, wireframing, prototyping, responsive design, testing, iterating on designs</p>
+            <br>
+        </div>
+    </div>
+
+    <div class="user-story text-center pt-3">
+        <h4>Understanding the User</h4>
+        <div class="details">
+            <div>
+                <h3>User Stories</h3>
+                <div class="row p-3">
+                    <div class="col-md-6">
+                        <img src="images/pet_family/story1.svg" alt="" width="60%">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/pet_family/story2.svg" alt="" width="60%">
+                    </div>
+                </div>
+                <br>
+                <div class="row p-3">
+                    <div class="col-md-6 my-auto text-left">
+                        As a person who wants to get a dog I want to be able to look at dogs 
+                        online and adopt one so that I don't have to spend time talking to people who take too 
+                        long or sometimes don't even respond.
+                    </div>
+                    <div class="col-md-6 my-auto text-left">
+                        As a busy employee who wants to adopt a dog I want to be able to look at dogs and know 
+                        their history before adopting them so that I know if my dog will be able to live with it.
+                    </div>
+                </div>           
+            </div>
+        </div>
+        <div class="text-center details">
+            <h3>User Research Summary</h3>
+            <div class="info">
+                I knew of a few people who wanted to adopt a pet but couldn't find any. I conducted a survey to 
+                know exactly what people wanted from the app. I analysed the answers to come up with a solution 
+                that could help maximum users. From the survey answers, I built an empathy map to empathize with 
+                the users better.
+            </div>
+            <div class="text-center">
+                <h3>User Personas</h3>
+            </div>        
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="images/pet_family/persona1.png" alt="" width="100%">
+                </div>
+                <div class="col-md-6">
+                    <img src="images/pet_family/persona2.png" alt="" width="100%">
+                </div>
+            </div>
+            <br>
+            <h3>User Pain Points</h3>
+            <div class="my-auto text-left pain_points">
+                • There are very few adoptions websites in India.   <br>
+                • The existing websites have confusing navigation.  <br>
+                • The interface of the websites is not easy to use. <br>
+            </div>
+        </div>
+        <h3>User Journey Map</h3>
+        <div class="details">
+            <img src="images/pet_family/user-journey.png" alt="" width="100%">
+        </div>
+    </div>
+
+    <div class="ideation text-center">
+        <h4>Ideation</h4>
+        <div class="row details text-left">
+            <div class="col-md-5">
+                <div class="">
+                    <h3>Paper Wireframes</h3>
+                </div>
+                <div>
+                    I sketched some wireframes on paper to get a clear idea of what I wanted the website to look like.
+                    <br>
+                    After some sketching and iterating, I can up with the optimal design for the home page and other pages as well.
+                    <br>
+                    I drew stars against the elements that I liked and wanted to include in the final draft of the wireframes.
+                </div>
+            </div>
+            <div class="col-md-7">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="images/pet_family/wireframe1.jpg" alt="" width="100%">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/pet_family/wireframe2.jpg" alt="" width="100%">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/pet_family/wireframe3.jpg" alt="" width="100%">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/pet_family/wireframe4.jpg" alt="" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row details text-left">
+            <div class="col-md-5 my-auto">
+                <div class="">
+                    <h3>Digital Wireframes</h3>
+                </div>
+                <div>
+                    Once I had an idea about the layout of the website, I moved on to making digital wireframes of the same.
+                    <br>
+                    My goal was to make the navigation simple.
+                    <br>
+                    All the pages must be accessible from any part of the wesite.
+                </div>
+            </div>
+            <div class="col-md-7">
+                <img src="images/pet_family/wireframe5.png" alt="" width="100%">
+            </div>
+        </div>
+        <div class="row details text-left">
+            <div class="col-md-5 my-auto">
+                <div class="">
+                    <h3>Digital Wireframes for additional screen sizes</h3>
+                </div>
+                <div>
+                    As I wanted Pet Family to be a responsive website, I worked on wireframes for a mobile screen 
+                    size as well.
+                </div>
+            </div>
+            <div class="col-md-7">
+                <img src="images/pet_family/wireframe6.png" alt="" width="100%">
+            </div>
+        </div>
+        <div class="details text-left">
+            <div class="col-md-6 my-auto">
+                <div class="">
+                    <h3>Low-Fidelity Prototype</h3>
+                </div>
+                <div>
+                    To create the low fidelity prototype I connected all the screens involved in the primary 
+                    user flow for the adoption. I took feedback from the users about the flow of the website.
+                </div>
+                <br><br>
+            </div>
+            <div class="col-md-6 my-auto">
+                <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+                    <div class="button">Prototype Link</div>
+                </a>
+            </div>
+        </div>
+        <div class="row details">
+            <div class="col-md-6">
+                <img src="images/pet_family/prototype1.png" alt="" width="100%">
+            </div>
+            <div class="col-md-6">
+                <img src="images/pet_family/prototype2.png" alt="" width="100%">
+            </div>
+        </div>
+        <br><br>
+        <div class="text-center">
+            <h3>Usability Study Findings</h3>
+        </div> 
+        <div class="row details">
+            <div class="col-md-4 text-left">
+                <p>There was no option to send a saved application.</p>
+            </div>
+            <div class="col-md-4 text-left">
+                <p>Users wanted to view more than one photo of the animal on the website.</p>
+            </div>
+            <div class="col-md-4 text-left">
+                <p>There was no confirmation page once the payment for donation was done.</p>
+            </div>
+        </div>
+        <div class="info">
+            Based on the feedback I received from the usability study, I refined my designs and made the required changes.
+        </div>
+        <div class="usability">
+            <img src="images/pet_family/u1.png" alt="" width="100%">
+            <img src="images/pet_family/u2.png" alt="" width="100%">
+            <img src="images/pet_family/u3.png" alt="" width="100%">
+        </div>
+
+        <div class="row details text-left">
+            <div class="col-md-6 my-auto">
+                <div class="">
+                    <h3>High-Fidelity Prototype</h3>
+                </div>
+                <div>
+                    The high fidelity prototype followed the same user flow as the low fidelity prototype. I 
+                    included the changes that were made after considering the feedback received.
+                </div>
+                <br><br>
+                <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+                    <div class="button">Prototype Link</div>
+                </a>
+            </div>
+            <div class="col-md-6 my-auto">
+                <img src="images/pet_family/prototype3.png" alt="" width="100%">
+            </div>
+        </div>
+    </div>
+    <div class="user-story pt-3">
+        <div class="text-center details">
+            <h4>Accessibility Considerations</h4>
+        </div> 
+        <div class="info" style="width: fit-content; margin: auto;">
+            •   I used headings with different sizes for clear visual hierarchy.
+                <br>
+            •   I used colours with good contrast for a good visual experience.
+        </div>
+        <div class="row details">
+            <div class="col-md-6">
+                <h3>Impact</h3>
+                <p>
+                    Through this project I aim to make the process of pet adoption simpler. A lot of people who 
+                    want to adopt cannot do it because of lack of choices. With this website, they can get the 
+                    opportunity to do the good that they want to.
+                </p>
+                <br>               
+            </div>
+            <div class="col-md-6">
+                <h3>What I Learnt</h3>
+                <p>
+                    I learnt that even a small design change can have a huge impact on the overall user experience. 
+                    The most important takeaway for me would be that design is not a singular task. It is a process 
+                    of iterating and reiterating.
+                </p>
+                <br>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>    
 </body>
 </html>
