--- a/pet_family.html
+++ b/pet_family.html
@@ -257,6 +257,19 @@
             <img src="images/pet_family/u2.png" alt="" width="100%">
             <img src="images/pet_family/u3.png" alt="" width="100%">
         </div>
+        <div class="text-center">
+            <h3>Mockups</h3>
+        </div> 
+        <div class="usability">
+            <img src="images/pet_family/m1.png" alt="" width="100%">
+        </div>
+
+        <div class="text-center">
+            <h3>Designs for additional screen sizes</h3>
+        </div> 
+        <div class="usability">
+            <img src="images/pet_family/m2.png" alt="" width="100%">
+        </div>
 
         <div class="row details text-left">
             <div class="col-md-6 my-auto">
@@ -286,7 +299,7 @@
                 <br>
             •   I used colours with good contrast for a good visual experience.
         </div>
-        <div class="row details">
+        <div class="row details mb-0">
             <div class="col-md-6">
                 <h3>Impact</h3>
                 <p>
@@ -307,6 +320,7 @@
             </div>
         </div>
     </div>
+    <div class="footer text-center">© 2021 Riona Dsouza</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>    
 </body>
 </html>
