--- a/eatfit.html
+++ b/eatfit.html
@@ -243,13 +243,13 @@
                     For the website, I designed for the mobile-view and the desktop view.
                 </div>
                 <div class="row details">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img src="images/eatfit/res1.png" alt="" width="100%">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img src="images/eatfit/res2.png" alt="" width="100%">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 hide">
                         <img src="images/eatfit/res3.png" alt="" width="90%">
                     </div>
                 </div>
@@ -282,6 +282,9 @@
         </div>
     </div>
     <div class="footer text-center">© 2021 Riona Dsouza</div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
 </body>
 </html>
