--- a/pet_family.html
+++ b/pet_family.html
@@ -19,7 +19,7 @@
                 <img src="images/logo.svg" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#3B0708" class="bi bi-list" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#F8F9FA" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                 </svg>
             </button>
@@ -95,13 +95,21 @@
                     <div class="col-md-6">
                         <img src="images/pet_family/story1.svg" alt="" width="60%">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 hide">
                         <img src="images/pet_family/story2.svg" alt="" width="60%">
+                    </div>
+                    <div class="col-md-6 my-auto text-left exchange">
+                        As a person who wants to get a dog I want to be able to look at dogs 
+                        online and adopt one so that I don't have to spend time talking to people who take too 
+                        long or sometimes don't even respond.
                     </div>
                 </div>
                 <br>
                 <div class="row p-3">
-                    <div class="col-md-6 my-auto text-left">
+                    <div class="col-md-6 exchange">
+                        <img src="images/pet_family/story2.svg" alt="" width="60%">
+                    </div>
+                    <div class="col-md-6 my-auto text-left hide">
                         As a person who wants to get a dog I want to be able to look at dogs 
                         online and adopt one so that I don't have to spend time talking to people who take too 
                         long or sometimes don't even respond.
