--- a/pet_family.html
+++ b/pet_family.html
@@ -171,17 +171,17 @@
             </div>
             <div class="col-md-7">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6 my-auto">
                         <img src="images/pet_family/wireframe1.jpg" alt="" width="100%">
                     </div>
-                    <div class="col-md-3">
-                        <img src="images/pet_family/wireframe2.jpg" alt="" width="100%">
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6 my-auto">
                         <img src="images/pet_family/wireframe3.jpg" alt="" width="100%">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6 my-auto">
                         <img src="images/pet_family/wireframe4.jpg" alt="" width="100%">
+                    </div>
+                    <div class="col-md-3 col-6 my-auto">
+                        <img src="images/pet_family/wireframe2.jpg" alt="" width="100%">
                     </div>
                 </div>
             </div>
