--- a/pet_family.html
+++ b/pet_family.html
@@ -229,7 +229,7 @@
                 <br><br>
             </div>
             <div class="col-md-6 my-auto">
-                <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+                <a href="https://xd.adobe.com/view/c73cea13-f904-41fb-8212-67de2d327d01-926f/" target="_blank">
                     <div class="button">Prototype Link</div>
                 </a>
             </div>
@@ -289,7 +289,7 @@
                     included the changes that were made after considering the feedback received.
                 </div>
                 <br><br>
-                <a href="https://www.figma.com/proto/2e734wMsryuDwfvvneJ61d/EatFit?node-id=66%3A487&scaling=min-zoom&page-id=66%3A3&starting-point-node-id=66%3A487&show-proto-sidebar=1" target="_blank">
+                <a href="https://xd.adobe.com/view/b26e218b-3010-40c6-8e49-403551ee01f3-e73d/" target="_blank">
                     <div class="button">Prototype Link</div>
                 </a>
             </div>
