--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
             </div>
