--- a/about.html
+++ b/about.html
@@ -55,10 +55,11 @@
         <div class="text-left overview">
             I am a student pursuing my degree in Computer Engineering. 
             <br><br>
-            For the longest time I have struggled with finding my passion. I find that I’m moderately good at a lot of things but nothing that I could make a career out of. Finally I have found my calling in UX design. It perfectly combines both my love for creativity and my knowledge in technology. I am detail-oriented when it comes to things I like. If I like doing something, I will spend hours on it till I’m satisfied with how it has turned out.
-            <br>
-            As of now, I haven’t worked in a professional setting yet. I have worked on multiple projects alongside my peers. 
-            <br> <br>
+            For the longest time I have struggled with finding my passion. I find that I’m moderately good at a lot of things but nothing that I could make a career out of. Finally I have found my calling in UX design. It perfectly combines both my love for creativity and my knowledge in technology. 
+            <br><br>
+            When it comes to UX design, I can spend hours together working on a project till I'm completely satisfied with the outcome. What i find fascinating about UX design is the problem-solving approach it has. Every product must be designed with the users' problems in mind. Afterall, if the product doesn't solve the problem, what is it worth?
+            <br><br>
+            As of now, I haven’t worked in a professional setting yet but I have worked on multiple projects on my own. 
             I have recently completed the Google Professional Certificate for UX design. The course has guided me through the entire design process.
         </div>
     </div>
