--- a/index.html
+++ b/index.html
@@ -96,7 +96,17 @@
             </div> -->
         </div>
     </div>
-    <div class="footer text-center">© 2021 Riona Dsouza</div>
+    <div class="footer text-center pt-3">
+        <!-- <div class="details"> -->
+                <!-- <a href="#">
+                    <img src="images/instagram.svg" width="30px" class="icons"/>
+                </a> -->
+                <a href="https://www.linkedin.com/in/riona-dsouza-9bba021b0/">
+                    <img src="images/linkedin.svg" width="30px" class="icons"/>
+                </a>
+        <!-- </div> -->
+        © 2021 Riona Dsouza
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
