--- a/eatfit.html
+++ b/eatfit.html
@@ -286,7 +286,7 @@
                 <!-- <a href="#">
                     <img src="images/instagram.svg" width="30px" class="icons"/>
                 </a> -->
-                <a href="https://www.linkedin.com/in/riona-dsouza-9bba021b0/">
+                <a href="https://www.linkedin.com/in/riona-dsouza-9bba021b0/" target="_blank">
                     <img src="images/linkedin.svg" width="30px" class="icons"/>
                 </a>
         <!-- </div> -->
