--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                     <div class="caption"><h4>Pet Family</h4></div>
                 </a>
             </div>
-            <!-- <div class="col-md-6">
-                <a href="#">
-                    <img src="images/EatFit.png" alt="">
+            <div class="col-md-6">
+                <a href="https://experttutorial.co.in/" target="_blank">
+                    <img src="images/expert.png" alt="">
                 </a>
-            </div> -->
+            </div>
         </div>
     </div>
     <div class="footer text-center pt-3">
