--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
             <div class="col-md-6">
                 <a href="https://experttutorial.co.in/" target="_blank">
                     <img src="images/expert.png" alt="">
+                    <div class="caption">
+                        <h4 class="">Expert Tutorials</h4>
+                        <div class="" style="color: #212529;">Web Design</div>
+                    </div>
+                    
                 </a>
             </div>
         </div>
