--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img src="images/expert.png" alt="">
                     <div class="caption">
                         <h4 class="">Expert Tutorials</h4>
-                        <div class="" style="color: #212529;">Web Design</div>
+                        <div class="" style="color: #212529;">Web Design and Development</div>
                     </div>
                     
                 </a>
