--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
                             <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="pet_family.html">Pet Family</a></li>
+                            <li><a class="dropdown-item" href="all.html">Designs</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
