--- a/index.html
+++ b/index.html
@@ -91,13 +91,9 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a href="https://experttutorial.co.in/" target="_blank">
-                    <img src="images/expert.png" alt="">
-                    <div class="caption">
-                        <h4 class="">Expert Tutorials</h4>
-                        <div class="" style="color: #212529;">Web Design and Development</div>
-                    </div>
-                    
+                <a href="all.html">
+                    <img src="images/all.png" alt="" height="396px">
+                    <div class="caption"><h4>Other Designs</h4></div>
                 </a>
             </div>
         </div>
