--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
             </div>
             <div class="col-md-6">
                 <a href="all.html">
-                    <img src="images/all.png" alt="" height="396px">
+                    <img src="images/all.png" alt="">
                     <div class="caption"><h4>Other Designs</h4></div>
                 </a>
             </div>
         </div>
-        <div class="row projects">
+        <!-- <div class="row projects">
             <div class="col-md-12">
                 <a href="all.html">
                     <img src="images/all.png" alt="" height="396px">
                     <div class="caption"><h4>Other Designs</h4></div>
                 </a>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="footer text-center pt-3">
         <!-- <div class="details"> -->
