--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-6">
                 <a href="all.html">
-                    <img src="images/all.png" alt="">
+                    <img src="images/all.png" alt="" height="396px">
                     <div class="caption"><h4>Other Designs</h4></div>
                 </a>
             </div>
