--- a/allegro.html
+++ b/allegro.html
@@ -251,14 +251,14 @@
         </div>
     </div>    
     <div class="footer text-center pt-3">
-        <!-- <div class="details"> -->
-                <!-- <a href="#">
-                    <img src="images/instagram.svg" width="30px" class="icons"/>
-                </a> -->
+        <div class="details">
+                <a href="https://dribbble.com/rionadsouza" target="_blank">
+                    <img src="images/dribbble.svg" width="30px" class="icons"/>
+                </a>
                 <a href="https://www.linkedin.com/in/riona-dsouza-9bba021b0/" target="_blank">
                     <img src="images/linkedin.svg" width="30px" class="icons"/>
                 </a>
-        <!-- </div> -->
+        </div>
         © 2022 Riona Dsouza
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
