--- a/pet_family.html
+++ b/pet_family.html
@@ -330,15 +330,15 @@
         </div>
     </div>
     <div class="footer text-center pt-3">
-        <!-- <div class="details"> -->
-                <!-- <a href="#">
-                    <img src="images/instagram.svg" width="30px" class="icons"/>
-                </a> -->
+        <div class="details">
+                <a href="https://dribbble.com/rionadsouza" target="_blank">
+                    <img src="images/dribbble.svg" width="30px" class="icons"/>
+                </a>
                 <a href="https://www.linkedin.com/in/riona-dsouza-9bba021b0/" target="_blank">
                     <img src="images/linkedin.svg" width="30px" class="icons"/>
                 </a>
-        <!-- </div> -->
-        © 2021 Riona Dsouza
+        </div>
+        © 2022 Riona Dsouza
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
