--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a href="all.html">
+                <a href="https://dribbble.com/rionadsouza">
                     <img src="images/all.png" alt="">
-                    <div class="caption"><h4>Other Designs</h4></div>
+                    <div class="caption"><h4>Designs on Dribbble</h4></div>
                 </a>
             </div>
         </div>
