--- a/about.html
+++ b/about.html
@@ -60,8 +60,9 @@
             <br><br>
             When it comes to UX design, I can spend hours together working on a project till I'm completely satisfied with the outcome. What I find fascinating about UX design is the problem-solving approach it has. Every product must be designed with the users' problems in mind. Afterall, if the product doesn't solve the problem, what is it worth?
             <br><br>
-            As of now, I haven’t worked in a professional setting yet but I have worked on multiple projects on my own. 
-            I have recently completed the Google Professional Certificate for UX design. The course has guided me through the entire design process.
+            Given that almost my entire world revolves around the internet, anytime that I'm using my phone, subconsciously I automatically start finding flaws in websites and apps. I've recently discovered that I really enjoy doing this. I realise that this might sound like nit-picking, but I like to think of ways that I can improve a particular product. I know this sounds like work, but I feel like this comes naturally to me given my interest in UX design.
+            <br><br>
+            I have completed the Google Professional Certificate for UX design which has given me the confidence to put my work out there. The course has guided me through the entire design process.
         </div>
     </div>
 
