--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
     </div>
     <br><br><br>
     <div class="about-body">
-        <div class="text-left overview">
-            I am a student pursuing my degree in Computer Engineering. 
+        <div class="overview">
+            Hey! I'm a Computer Engineer with a passion in UI UX design. 
             <br><br>
             For the longest time I have struggled with finding my passion. I find that I’m moderately good at a lot of things but nothing that I could make a career out of. Finally I have found my calling in UX design. It perfectly combines both my love for creativity and my knowledge in technology. 
             <br><br>
